# idris-bot

./: IdeSlave.hs  IrcColor.hs  LICENSE  Main.hs  README.md  example.conf  idris-bot.cabal
src/: IdeMode.hs  IrcColor.hs  Main.hs
