name:                idris-bot
version:             0.1.0.0
synopsis:            An IRC bot connected to an Idris REPL
description:         This bot connects an Idris REPL with IRC by running idris
                     in IDE-mode, piping queries from IRC to it, interpreting
                     the responses and sending them back.
license:             BSD3
license-file:        LICENSE
author:              Melvar Chen
maintainer:          Melvar.Chen+idris.bot@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable idris-bot
  main-is:             Main.hs
  other-modules:       IdeMode, IrcColor
  other-extensions:    FlexibleContexts, ScopedTypeVariables
  build-depends:       base >= 4.6 && < 4.8, mtl ==2.2.*, bytestring ==0.10.*, containers ==0.5.*, text ==1.2.*, directory ==1.2.*, filepath ==1.3.*, process ==1.2.*, old-time ==1.1.*, parsec ==3.1.*, ConfigFile ==1.1.*, MissingH ==1.3.*, simpleirc ==0.3.*
  hs-source-dirs:      src
  default-language:    Haskell2010
